# unlocking-ai-agents-network-engineering

./: LAB.ipynb  LAB_solution.ipynb  README.md  hosts.json  pyproject.toml  test.py
complete_examples/: analyze_syslog.py  compare_usernames.py  config-post-check-ntp.py  convert_show_run.py  hosts.json  routing_table_markdown_format.py  structured_output.py
